# gauntlet-3-legacy-lens

./: .env.example  .gitignore  README.md  docker-compose.yml  presearch.md
backend/: .env.example  .env.production.example  .env.staging.example  Dockerfile  Makefile  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
backend/app/: cli.py  main.py
backend/app/api/: __init__.py  health.py  query.py
backend/app/core/: settings.py
backend/app/models/: __init__.py  corpus.py  features.py  health.py  ingest.py  query.py
backend/app/services/: __init__.py  cobol_chunker.py  feature_catalog.py  file_discovery.py  ingest_benchmarks.py  ingest_status_store.py  ingestion_service.py  openai_gateway.py  openai_resilience.py  qdrant_gateway.py  query_service.py  runtime.py  sourceforge_corpus.py  tracing.py  types.py
backend/data/corpus/: customer_accounts.cbl
backend/tests/: test_cobol_chunker.py  test_feature_catalog.py  test_file_discovery.py  test_health.py  test_ingest_benchmarks.py  test_ingestion_service.py  test_openai_gateway.py  test_query_api_routes.py  test_query_service.py  test_settings.py  test_sourceforge_corpus.py
backend/tests/test_support/: query_api_fakes.py
docs/: architecture.md  corpus-source.md  cost-analysis.md  environments.md  evaluation-results-production.md  evaluation-results-staging.md  evaluation-results.md  evaluation.md  ingest-benchmarks.md  rag-architecture-final.md  railway-runbook.md  requirements-evidence-map.md  setup.md
frontend/: .dockerignore  .env.production.example  .env.staging.example  .eslintrc.cjs  (+9 more)
(+22 files in other folders)
